# share-parcel-tracker

./: .env  .gitignore  Cargo.toml  HANDOFF_PHASES_2_3.md  README.md  main.py  pyproject.toml  share-db  share-tracker-redesign-plan.md  startup.sh
config/: settings.py  urls.py
migrations/2024-04-25-032923_create_transactions/: down.sql  up.sql
src/: date.rs  main.rs  schema.rs  seed.rs  test.rs  transaction.rs  transactions.rs  utils.rs
src/db/: connection.rs  mod.rs  schema.rs
src/models/: allocation.rs  mod.rs  stock.rs  summary.rs  transaction.rs
src/repositories/: allocation_repository.rs  mod.rs  stock_repository.rs  summary_repository.rs  transaction_repository.rs
src/services/: allocation_service.rs  import_service.rs  mod.rs  portfolio_service.rs  reporting_service.rs  stock_service.rs  transaction_service.rs
src/ui/: mod.rs  portfolio_printer.rs  reports_printer.rs  transaction_formatter.rs
tracker/: admin.py  forms.py  urls.py
tracker/migrations/: 0001_initial.py
tracker/models/: __init__.py  import_record.py  parcel.py  security.py  transaction.py
tracker/services/: cgt.py  csv_import.py  forecasting.py  matching.py
tracker/templates/tracker/: base.html  dashboard.html
tracker/templates/tracker/matching/: match_sell.html
tracker/templates/tracker/parcels/: detail.html  list.html
tracker/tests/: test_cgt.py  test_csv_import.py  test_e2e.py  test_forecasting.py  test_matching.py  test_models.py  test_reports.py  test_views.py
tracker/views/: dashboard.py  matching.py  parcels.py  reports.py  transactions.py
(+11 files in other folders)
