[package]
edition = "2021"
name    = "share-parcel-tracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
uuid     = { version = "1.8", features = ["v4"] }
