[package]
edition = "2021"
name    = "share-parcel-tracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["sqlite", "uuid"] }
dotenv = "0.15"
uuid   = { version = "1.8", features = ["v4"] }
