[package]
edition = "2021"
name    = "share-parcel-tracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
uuid   = { version = "1.8", features = ["v4"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
csv = "1.3"
